gcc/testsuite/rust/rustc/ui/issues/issue-2951.rs
fn foo<T, U>(x: T, y: U) {
    let mut xx = x;
    xx = y;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
// { dg-error ".E0308." "" { target *-*-* } .-4 }
}

fn main() {
}

